# TMRVC

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  GEMINI.md  ISSUE.md  README.md  TRAINING_DIAGNOSIS.md  TRAIN_GUIDE.md  WORD_DIC.md  bundler.toml  dev.py  dev.sh  old_trainer.py  pyproject.toml  task-a.md  task-b.md
tmrvc-core/: pyproject.toml
tmrvc-core/src/tmrvc_core/: __init__.py  _codegen.py  acting_tags.py  audio.py  constants.py  device.py  dialogue_types.py  text_utils.py  types.py  vocal_events.py  voice_state.py
tmrvc-data/: pyproject.toml
tmrvc-data/src/tmrvc_data/: __init__.py  alignment.py  augmentation.py  bootstrap_alignment.py  cache.py  code_switch.py  codec.py  dataset.py  dataset_adapters.py  dataset_report.py  emotion_dataset.py  emotion_features.py  encodec_codec.py  events.py  features.py  g2p.py  mimi_codec.py  phone_normalizer.py  preprocessing.py  pseudo_annotation.py  pseudo_label.py  sampler.py  script_parser.py  speaker.py  speaker_profile.py  style.py  supervision_scanner.py  text_tokenizer.py  tts_dataset.py  uclm_dataset.py  v4_dataset.py  vocal_event_detector.py  voice_state.py  wavlm_extractor.py  wavtokenizer_codec.py
tmrvc-data/src/tmrvc_data/bootstrap/: __init__.py  contracts.py  model_loader.py  pipeline.py  quality_gates.py  supervision.py
tmrvc-data/src/tmrvc_data/bootstrap/stages/: __init__.py  cache_export.py  confidence.py  diarization.py  enriched_transcript.py  ingest.py  normalize.py  physical_extraction.py  pseudo_speaker.py  rejection.py  semantic_annotation.py  speaker_embed.py  text_normalize.py  transcription.py  vad.py
tmrvc-data/src/tmrvc_data/cli/: __init__.py  bootstrap.py  curate.py  curation.py  extract_features.py  prepare_uclm.py  preprocess.py  verify_cache.py
tmrvc-data/src/tmrvc_data/curation/: __init__.py  data_service.py  errors.py  export.py  models.py  orchestrator.py  providers.py  scoring.py  service.py  stage_framework.py  validation.py
tmrvc-data/src/tmrvc_data/curation/providers/: __init__.py  asr.py  (+6 more)
tmrvc-engine-rs/: Cargo.toml
tmrvc-engine-rs/src/: character.rs  constants.rs  dsp.rs  f0_tracker.rs  g2p.rs  lib.rs  mel_thumbnail.rs  ort_bundle.rs  ping_pong.rs  pitch_shift.rs  processor.rs  resampler.rs  ring_buffer.rs  speaker.rs  speaker_encoder.rs  style.rs  tensor_pool.rs  token_context.rs  tts.rs  voice_profile.rs  wav_reader.rs
tmrvc-engine-rs/src/nam/: lstm.rs  mod.rs  parse.rs  processor.rs  wavenet.rs
tmrvc-engine-rs/tests/: parity_golden.rs  runtime_smoke.rs
tmrvc-export/: pyproject.toml
tmrvc-export/src/tmrvc_export/: __init__.py  _utils.py  character_file.py  export_codec.py  export_onnx.py  export_speaker.py  export_tts.py  export_uclm.py  quantize.py  speaker_file.py  verify_parity.py
tmrvc-export/src/tmrvc_export/cli/: __init__.py  create_character.py  enroll.py  export.py
tmrvc-gui/: pyproject.toml
tmrvc-gui/src/tmrvc_gui/: __init__.py  __main__.py  app.py  gradio_app.py  gradio_state.py  i18n.py  main_window.py
tmrvc-gui/src/tmrvc_gui/locales/: en.json  ja.json  zh.json
tmrvc-gui/src/tmrvc_gui/models/: config_manager.py  project_state.py
tmrvc-gui/src/tmrvc_gui/pages/: __init__.py  admin_dashboard.py  codec_train.py  curation.py  data_prep.py  distillation.py  enrollment.py  evaluation.py  onnx_export.py  realtime_demo.py  remote_client.py  script.py  server.py  style_editor.py  teacher_train.py  token_train.py  tts.py
tmrvc-gui/src/tmrvc_gui/resources/: style.qss
tmrvc-gui/src/tmrvc_gui/widgets/: audio_meter.py  file_drop.py  log_viewer.py  metric_plot.py  progress_panel.py  waveform_view.py
tmrvc-gui/src/tmrvc_gui/workers/: __init__.py  audio_engine.py  base_worker.py  data_worker.py  eval_worker.py  export_worker.py  finetune_worker.py  ping_pong.py  ring_buffer.py  script_worker.py  train_worker.py  tts_worker.py
tmrvc-gui/tests/: test_gradio_app.py
tmrvc-rt/: Cargo.toml
tmrvc-rt/src/: app.rs  main.rs
tmrvc-rt/src/audio/: stream.rs
tmrvc-rt/src/ui/: controls.rs  device_panel.rs  mod.rs  model_panel.rs  monitor.rs  voice_profile_panel.rs
tmrvc-serve/: pyproject.toml
tmrvc-serve/src/tmrvc_serve/: __init__.py  _helpers.py  app.py  auth.py  cli.py  cli_generate.py  events.py  intent_compiler.py  llm_backend.py  middleware.py  schemas.py  style_resolver.py  trajectory_service.py  trajectory_store.py  tts_engine.py  uclm_engine.py  vc_engine.py  vc_engine_pool.py
tmrvc-serve/src/tmrvc_serve/routes/: admin.py  auth.py  characters.py  health.py  tts.py  ui.py  vc_streaming.py  ws_chat.py
tmrvc-train/: pyproject.toml
tmrvc-train/src/tmrvc_train/: __init__.py  base_trainer.py  context_predictor.py  diffusion.py  distillation.py  eval_metrics.py  experiment.py  fewshot.py  lcd.py  lora.py  losses.py  modules.py  pipeline.py  rl_trainer.py  style_trainer.py  trainer.py  tts_trainer.py  uclm_trainer.py  v4_loss.py  voice_source_stats.py
tmrvc-train/src/tmrvc_train/cli/: __init__.py  distill.py  finetune.py  finetune_encodec.py  train_codec.py  train_pipeline.py  train_style.py  train_teacher.py  train_token.py  train_tts.py  train_uclm.py
tmrvc-train/src/tmrvc_train/dataset/: __init__.py  uclm_dataset.py
tmrvc-train/src/tmrvc_train/models/: __init__.py  acoustic_refinement.py  acting_latent.py  acting_losses.py  biological_constraints.py  breath_event_head.py  codec_variants.py  content_encoder.py  content_synthesizer.py  control_encoder.py  control_tokenizer.py  converter.py  discriminator.py  disentangle_losses.py  duration_predictor.py  emotion_classifier.py  emotion_codec.py  f0_predictor.py  ir_estimator.py  reference_encoder.py  scene_state.py  speaker_encoder.py  ssl_extractor.py  streaming_codec.py  streaming_uclm.py  style_encoder.py  teacher_unet.py  text_encoder.py  text_features.py  token_model.py  uclm.py  uclm_loss.py  uclm_model.py  uclm_transformer.py  vocoder.py  voice_source_estimator.py  voice_state_encoder.py  voice_state_film.py  vq_bottleneck.py
tmrvc-train/src/tmrvc_train/rl/: __init__.py  config.py  reward.py  trainer_rl.py
tmrvc-vst/: Cargo.toml
tmrvc-vst/src/: lib.rs  params.rs  plugin.rs
(+366 files in other folders)
