[project]
name = "tmrvc"
version = "0.1.0"
description = "TMRVC — IR-aware Real-time Voice Conversion"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["tmrvc-core", "tmrvc-data", "tmrvc-gui", "tmrvc-train", "tmrvc-export"]

[dependency-groups]
dev = [
    "tmrvc-core",
    "tmrvc-data",
    "tmrvc-gui",
    "tmrvc-train",
    "tmrvc-export",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
tmrvc-core = { workspace = true }
tmrvc-data = { workspace = true }
tmrvc-gui = { workspace = true }
tmrvc-train = { workspace = true }
tmrvc-export = { workspace = true }

[tool.uv]
constraint-dependencies = [
    "numba>=0.60",
    "llvmlite>=0.43",
]
