[project]
name = "tmrvc"
version = "0.1.0"
description = "TMRVC — IR-aware Real-time Voice Conversion"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.uv.workspace]
members = ["tmrvc-core", "tmrvc-data", "tmrvc-gui", "tmrvc-train", "tmrvc-export", "tmrvc-serve"]

[dependency-groups]
dev = [
    "tmrvc-core",
    "tmrvc-data",
    "tmrvc-gui",
    "tmrvc-train",
    "tmrvc-export",
    "tmrvc-serve",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.uv.sources]
tmrvc-core = { workspace = true }
tmrvc-data = { workspace = true }
tmrvc-gui = { workspace = true }
tmrvc-train = { workspace = true }
tmrvc-export = { workspace = true }
tmrvc-serve = { workspace = true }

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
environments = ["sys_platform == 'linux' or sys_platform == 'win32'"]
constraint-dependencies = [
    "numba>=0.60",
    "llvmlite>=0.43",
]
