[project]
name = "tmrvc-core"
version = "0.1.0"
description = "TMRVC core: shared constants, mel computation, type definitions"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.2",
    "torchaudio>=2.2",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tmrvc_core"]
