[project]
name = "tmrvc-export"
version = "0.1.0"
description = "TMRVC export: ONNX export, quantization, parity verification"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tmrvc-core",
    "tmrvc-train",
    "onnx>=1.15",
    "onnxruntime>=1.17",
    "onnxscript>=0.1",
]

[project.scripts]
tmrvc-enroll = "tmrvc_export.cli.enroll:main"
tmrvc-export-uclm = "tmrvc_export.export_uclm:main"
tmrvc-export-codec = "tmrvc_export.export_codec:main"
tmrvc-export-speaker = "tmrvc_export.export_speaker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tmrvc-core = { workspace = true }
tmrvc-train = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/tmrvc_export"]
