[project]
name = "tmrvc-serve"
version = "0.1.0"
description = "TMRVC serve: FastAPI TTS server with WebSocket support"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tmrvc-core",
    "tmrvc-train",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
]

[project.scripts]
tmrvc-serve = "tmrvc_serve.cli:main"
tmrvc-generate-script = "tmrvc_serve.cli_generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tmrvc-core = { workspace = true }
tmrvc-train = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/tmrvc_serve"]
