[project]
name = "tmrvc-train"
version = "0.2.0"
description = "TMRVC train: Codec-Latent pipeline training"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tmrvc-core",
    "tmrvc-data",
    "torch>=2.2",
    "torchaudio>=2.2",
    "wandb>=0.16",
    "accelerate>=0.25",
]

[project.scripts]
tmrvc-train-codec = "tmrvc_train.cli.train_codec:main"
tmrvc-train-token = "tmrvc_train.cli.train_token:main"
tmrvc-train-tts = "tmrvc_train.cli.train_tts:main"
tmrvc-train-style = "tmrvc_train.cli.train_style:main"
tmrvc-train-uclm = "tmrvc_train.cli.train_uclm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tmrvc-core = { workspace = true }
tmrvc-data = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/tmrvc_train"]
