[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmrvc-train"
version = "0.1.0"
description = "TMRVC Training Package"
authors = [
    { name = "Kojiro Tanaka" }
]
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "pyyaml",
    "tmrvc-core",
    "tmrvc-data",
]

[project.scripts]
tmrvc-train-uclm = "tmrvc_train.cli.train_uclm:main"
tmrvc-train-codec = "tmrvc_train.cli.train_codec:main"
tmrvc-finetune-encodec = "tmrvc_train.cli.finetune_encodec:main"
tmrvc-train-pipeline = "tmrvc_train.cli.train_pipeline:main"
